fix visible

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -652,6 +652,7 @@ textarea {
 }
 
 #fastSearch {
+    visibility: hidden;
     display: inline-block;
     position: absolute;
     z-index: 1;
